2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/disk/arc/arcdisk.c (grub_arcdisk_iterate): Fix
	parameter declarations.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/lsmmap.c: Fix unused variable on emu.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Improve spkmomdem reliability by adding a separator between bytes.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/partmap/msdos.c (embed_signatures): Add the signature of
	an Acer registration utility with several sightings in the wild.
	Reported by: Rickard Westman.  Fixes Ubuntu bug #987022.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	Remove nested functions from filesystem directory iterators.

	* include/grub/fs.h (grub_fs_dir_hook_t): New type.
	(struct grub_fs.dir): Add hook_data argument.

	Update all implementations and callers.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Multi-boot manual config): Fix typo for
	"recommended".

2013-01-20  Leif Lindholm  <leif.lindholm@arm.com>

	* util/grub-mkimage.c (main): Postpone freeing arguments.output
	until after its use in generate_image.

2013-01-20  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/loader/i386/linux.c (grub_cmd_initrd): Don't add the
	initrd size to addr_min, since the initrd will be allocated after
	this address.

2013-01-20  Andrey Borzenkov <arvidjaar@gmail.com>

	* conf/Makefile.common: Fix autogen rules to pass definition
	files on stdin; Makefile.util.am needs Makefile.utilgcry.def

2013-01-20  Leif Lindholm  <leif.lindholm@arm.com>

	* include/grub/elf.h: Update ARM definitions based on binutils.

2013-01-20  Aleš Nesrsta  <starous@volny.cz>

	Split long USB transfers into short ones.

2013-01-20  Andrey Borzenkov <arvidjaar@gmail.com>

	* docs/grub.texi (Simple configuration): Clarify GRUB_HIDDEN_TIMEOUT
	is interrupted by ESC.

2013-01-20  Vladimir Serbinenko  <phcoder@gmail.com>
