@@ -1,5 +1,10 @@
 2013-01-21  Colin Watson  <cjwatson@ubuntu.com>
 
+	Fix powerpc and sparc64 build failures caused by un-nesting memory
+	map iterators.
+
+2013-01-21  Colin Watson  <cjwatson@ubuntu.com>
+
 	* grub-core/disk/arc/arcdisk.c (grub_arcdisk_iterate): Fix
 	parameter declarations.
 
